loopdowhile.LoopDoWhile.scala.code
do {
  forward()
} while (isOverwhite() == false)